--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Luca Barone's Blog
+email: luca.barone1@studenti.unicampania.it
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my website
 baseurl: "/Blog" # the subpath of your site, e.g. /blog
 url: "https://lucabarone95.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  lucabarone95
+
+github: [metadata]
 
 # Build settings
-theme: minima
+#Removed minima theme because now is regulae
+# theme: minima
 plugins:
   - jekyll-feed
 
